--- a/html/teaMakingStep.html
+++ b/html/teaMakingStep.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="../css/nav.css">
     <style>
@@ -56,7 +57,7 @@
         .gap .imgContainer img {
             width: 40%;
             height: 100%;
-            
+
         }
 
         .gap .imgContainer img.firstImg::after {
@@ -68,7 +69,7 @@
             transform: translateX(50%);
             /* opacity: 0.5; */
             /* position: absolute; */
-         
+
 
         }
 
@@ -101,22 +102,25 @@
             position: absolute;
             animation: shakeLight 1.3s ease-in-out infinite;
         }
+
         @keyframes shakeLight {
-            0%{
+            0% {
                 opacity: 0;
                 /* translate: translate(60%, 500%); */
                 scale: 1.1;
             }
+
             /* 50%{
                 opacity: 0.8;
                 translate: translate(60%, 400%);
             } */
-            100%{
+            100% {
                 opacity: 1;
                 /* translate: translate(60%, 200%); */
                 scale: 1.4;
             }
         }
+
         @media screen and (max-width: 900px) {
             .nav {
                 flex-direction: column;
@@ -138,13 +142,46 @@
                 /* font-size: 1em; */
             }
 
-            .shell .gap  {
+            .shell .gap {
                 font-size: 1em;
             }
-            .shel .gap .point{
-                transform: translate(20%,-20%);
+
+            .shel .gap .point {
+                transform: translate(20%, -20%);
             }
 
+        }
+
+        @media screen and (min-width: 600px) {
+
+
+            .shell .gap {
+                font-size: 2em;
+            }
+
+            .img {
+                font-size: 2em;
+            }
+
+            .shel .gap .point {
+                transform: translate(20%, -20%);
+            }
+        }
+
+        @media screen and (max-height: 600px) {
+
+
+            .shell .gap {
+                font-size: 1rem;
+            }
+
+            .img {
+                font-size: 1.5em;
+            }
+
+            .shel .gap .point {
+                transform: translate(20%, -20%);
+            }
         }
     </style>
 </head>
@@ -159,9 +196,9 @@
         <div class="menu">
             <ul>
                 <!-- <li>茶叶品种</li>
-                <li>制茶步骤</li>
-                <li>品茶步骤</li>
-                <li>更多资讯</li> -->
+                    <li>制茶步骤</li>
+                    <li>品茶步骤</li>
+                    <li>更多资讯</li> -->
 
             </ul>
             <ul>
@@ -283,18 +320,26 @@
 
     </div>
 </body>
+/*
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.js"></script> */
 <script>
     let audio = document.querySelector('audio');
     audio.play();
-    let imgContainer = document.querySelectorAll('.gap .imgContainer');
-    imgContainer.forEach(element => {
-        element.addEventListener('click', () => {
-            // imgContainer.addEventListener('click', () => {
-            element.querySelector('.gap .arrowRight').classList.toggle('gapActive');
-            element.querySelector('.gap .finishImg').classList.toggle('gapActive');
+    /* // let imgContainer = document.querySelectorAll('.gap .imgContainer');
+    // imgContainer.forEach(element => {
+    //     element.addEventListener('click', () => {
+    //         // imgContainer.addEventListener('click', () => {
+    //         element.querySelector('.gap .arrowRight').classList.toggle('gapActive');
+    //         element.querySelector('.gap .finishImg').classList.toggle('gapActive');
 
-        })
-    });
+    //     })
+    // }); */
+    /* // jQuery写法 */
+    $('.gap .imgContainer').click(function () {
+        // $(this).hide()
+        $(this).find('.arrowRight').toggleClass('gapActive');
+        $(this).find('.finishImg').toggleClass('gapActive');
+    })
 </script>
 
 </html>
